경북대 BE_김동윤 4주차 과제 (2단계) (#267)
* refactor(build.gradle): java version 17로 변경

* init

* refactor: 객체 중심으로 패키지 정리
-Product, User, Wish
- 하위에 service, controller repository, domain 패키지

* refactor(JwtUtil): Base64인증, 기한 말료 코드 추가

* feat: Jwt 인증을 위해 클래스, 코드 추가
- LoginUser: 어노테이션
- WebConfig
- JwtAuthenticationFilter: 헤더에서 JWT 검증
- LoginMemberArgumentResolver

* feat: User Login DTO 설정

* refactor: LoginRequest, Response 이용하도록 수정

* feat(UserService): findByEmail 코드 추가

* feat(UserRepository): findByEmail 코드 추가

* 작은 수정

* feat(ReadMe): 1단계 기능 요구사항 명세

* feat: Category, CategoryDTO 선언

* feat: CategoryRepository 생성

* feat: Category CRUD 선언

* feat: CategoryService 선언

* feat(Product): Category와 매핑

* refactor: http 상태코드 반환 수정

* delete: 안쓰는 메소드 삭제

* refactor(Category): Constructor추가
- name단독

* refactor: ProductDTO사용하도록 수정

* feat(ProductDTO): 설계

* refactor(ProductService): ProductDTO 사용하도록 코드 수정

* refactor(Product): Category setter/getter 추가

* refactor: 바뀐 service코드에 맞게 수정

* delete(add_product): id 입력받는 창 삭제

* refactor: test코드들 category도 반영

* refactor(ProductViewController): category 정보 추가 제공

* refactor(ProductDTO): id default값 0으로 지정

* refactor(add_product): category 추가 처리
- category 선택박스 생성
- categoryId 정보 제공

* refactor(Category): 개행

* refactor(CategoryService): update() 단순화
- isExist문 제거, .orElseThrow로 대체함

* refactor(ProductDTO): 라인포매팅

* refactor(ProductDTO): 접근제한자 생성

* refactor(ProductService): setter -> 비즈니스 함수로 추상화

* refactor(WishlistRepositoryTest): 개행

* feat(Option): Option 객체 선언

* feat(OptionDTO): Option DTO 클래스 선언

* feat(OptionRepository): OptionClass Repo 선언

* feat(Product): Option과 의존관계 매핑

* refactor(OptionRepo): Repository 어노테이션 추가

* refactor(ProductService): .toList()로 코드 단순화

* refactor(Option): private 접근제한자 추가

* refactor(OptionDTO): 생성자 추가

* feat(OptionRepository): ProductId가 같은 옵션찾기 함수 선언

* feat(OptionService): find, save 기능 구현
